fixed loop gap, TODO resize images to fit better

--- a/src/style.css
+++ b/src/style.css
@@ -28,18 +28,11 @@
   background-repeat: repeat-x;
 }
 
-.parallax_animate {
-  animation-name: scrollBackground;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-}
-
 .bg3 {
   background-image: url('../assets/autumn_forest_2d_pixel_art/Background/3.png');
   transform: translateZ(-9px) scale(2.5);
   background-repeat: repeat-x;
   z-index: 1;
-  animation-duration: calc(var(--parallax-speed) * 5);
 }
 
 .bg2 {
@@ -47,7 +40,6 @@
   background-repeat: repeat-x;
   transform: translateZ(-6px) scale(2.0);
   z-index: 2;
-  animation-duration: calc(var(--parallax-speed) * 3);
 }
 
 .bg1 {
@@ -55,7 +47,6 @@
   background-repeat: repeat-x;
   transform: translateZ(-3px) scale(1.5);
   z-index: 3;
-  animation-duration: calc(var(--parallax-speed) * 2);
 }
 
 .character {
@@ -97,16 +88,6 @@
 
   to {
     transform: translate3d(-100%, 0, 0);
-  }
-}
-
-@keyframes scrollBackground {
-  from {
-    background-position: 0 0;
-  }
-
-  to {
-    background-position: -10000px 0;
   }
 }
 
